added new spawn points

--- a/templates/pages/multis.html
+++ b/templates/pages/multis.html
@@ -48,6 +48,11 @@
 			<label for="groupID">Group ID:</label>
 			<input type="text" id="groupID">
 		</div>
+		
+		<div class="pla-control">
+			<label for="nightToggle">Check Night Spawns:</label>
+			<input type="checkbox" id="nightToggle">
+		</div
 
         <div class="pla-control-spaced">
             <label for="mmoShinyFilter">Shiny or Alpha</label>
