--- a/templates/pages/multiseed.html
+++ b/templates/pages/multiseed.html
@@ -59,13 +59,34 @@
 				<li><img src="static/img/spawnpoint-shellos.png"></li>
 				<li><img src="static/img/spawnpoint-abra.png"></li>
 			</ul>
+			<ul class="pla-results-ul">
+				<li><img src="static/img/spawnpoint-magikarp.png"></li>
+				<li><img src="static/img/spawnpoint-shinx.png"></li>
+			</ul>
+			<ul class="pla-results-ul">
+				<li><img src="static/img/spawnpoint-buizel.png"></li>
+				<li><img src="static/img/spawnpoint-geodude.png"></li>
+			</ul>
+			<ul class="pla-results-ul">
+				<li><img src="static/img/spawnpoint-pichu.png"></li>
+			</ul>
 			</div>
 			
 			<button type="button" class="pla-button expandable-control">Crimson Mirelands</button>
-			<div class="expandable"
+			<div class="expandable">
 			<ul class="pla-results-ul">
 				<li><img src="static/img/spawnpoint-combee.png"></li>
 				<li><img src="static/img/spawnpoint-petilil.png"></li>
+			</ul>
+			<ul class="pla-results-ul">
+				<li><img src="static/img/spawnpoint-budew.png"></li>
+			</ul>
+			</div>
+			
+			<button type="button" class="pla-button expandable-control">Cobalt Coastlands</button>
+			<div class="expandable">
+			<ul class="pla-results-ul">
+				<li><img src="static/img/spawnpoint-basculin.png"></li>
 			</ul>
 			</div>
 			
@@ -128,6 +149,11 @@
 			<select name="groupID" id="groupID" class="form-control">
 				<option value="49">Select Spawn Point</option>
 			</select>
+		</div>
+		
+		<div class="pla-control">
+			<label for="nightToggle">Check Night Spawns:</label>
+			<input type="checkbox" id="nightToggle">
 		</div>
 
         <div class="pla-control-spaced">
