fixed some chrome javascript module stuff

--- a/templates/pages/multiseed.html
+++ b/templates/pages/multiseed.html
@@ -3,7 +3,7 @@
 {% block title %}Multi Seed Checker{% endblock %}
 
 {% block head %}
-	<script type="module" src="static/js/jquery.min.js"></script>
+	<script type="module" src="static/js/jquery.min.mjs"></script>
 	<script type="module">
 	$(document).ready(function(e){
 		console.log("ready!")
