--- a/templates/pages/spawns.html
+++ b/templates/pages/spawns.html
@@ -3,7 +3,7 @@
 {% block title %}Spawn Checker{% endblock %}
 
 {% block head %}
-	<script type="module" src="static/js/jquery.min.mjs"></script>
+	<script type="text/javascript" src="static/js/jquery.min.mjs"></script>
 	<script>
 	$(document).ready(function(e){
 		console.log("ready!")
