--- a/templates/pages/distortions.html
+++ b/templates/pages/distortions.html
@@ -75,12 +75,13 @@
     <template data-pla-results-template>
         <div class="pla-results-item" data-pla-results-template>
             <ul class="pla-results-heading pla-results-ul">
+                <li class="pla-results-sprite" data-pla-results-sprite></li>
                 <li class="pla-results-species" data-pla-results-species></li>
                 <li>At <span class="pla-results-location" data-pla-results-location></span></li>
             </ul>
 
             <ul class="pla-results-ul">
-                <li><span class="pla-results-label">Shiny:</span> <span data-pla-results-shiny></span></li>
+                <li><span class="pla-results-label">Shiny:</span> <span class="float -left" data-pla-results-shinysprite><span class="float -right" data-pla-results-shiny></span></span></li>
                 <li><span class="pla-results-label">Alpha:</span> <span data-pla-results-alpha></span></li>
             </ul>
 
