Integrated pokedex into app

--- a/templates/pages/spawns.html
+++ b/templates/pages/spawns.html
@@ -171,6 +171,11 @@
 				<li class="pla-results-sprite" data-pla-results-sprite></li>
 				<li class="pla-results-species" data-pla-results-species></li>
             </ul>
+			
+			<ul class="pla-results-ul">
+				<li><span class="pla-results-label">Shiny:</span> <span class="float -left" data-pla-results-shinysprite><span class="float -right" data-pla-results-shiny></span></span></li>
+				<li><span class="pla-results-label">Alpha:</span> <span data-pla-results-alpha></span></li>
+			</ul>
 
 			<ul class="pla-results-ul">
 				<li><span class="pla-results-adv">Advances To Shiny:</span> <span data-pla-results-adv></span></li>
