--- a/templates/pages/mmos.html
+++ b/templates/pages/mmos.html
@@ -63,7 +63,7 @@
         <div class="pla-control-actions">
             <button class="pla-button pla-button-action" id="pla-button-checkonemap">Check Map Index</button>
             <button class="pla-button pla-button-action" id="pla-button-checkmmos">Check All MMOS</button>
-            <button class="pla-button pla-button-action" id="pla-button-checknormals">Check Normal Outbreaks</button>
+            <button class="pla-button pla-button-action" id="pla-button-checkoutbreaks">Check Normal Outbreaks</button>
         </div>
     </section>
 
