Moved filters to their own sections

--- a/templates/pages/mmos.html
+++ b/templates/pages/mmos.html
@@ -24,6 +24,19 @@
             </select>
         </div>
 
+        <!--<div class="pla-control-spaced">
+            <label for="inmapcheck">In Area: (Not Currently Functional)</label>
+            <input type="checkbox" id="inmapcheck">
+        </div>-->
+        
+        <div class="pla-control-actions">
+            <button class="pla-button pla-button-action" id="pla-button-checkonemap">Check Map Index</button>
+            <button class="pla-button pla-button-action" id="pla-button-checkmmos">Check All MMOS</button>
+            <button class="pla-button pla-button-action" id="pla-button-checkoutbreaks">Check Normal Outbreaks</button>
+        </div>
+    </section>
+
+    <section>
         <div class="pla-control-spaced">
             <label for="mmoShinyFilter">Shiny or Alpha</label>
             <input type="checkbox" id="mmoShinyOrAlphaFilter">
@@ -52,18 +65,6 @@
         <div class="pla-control">
             <label for="mmoSpeciesFilter">Species Filter:</label>
             <input type="text" id="mmoSpeciesFilter">
-        </div>
-
-        <!--
-        <div class="pla-control-spaced">
-            <label for="inmapcheck">In Area: (Not Currently Functional)</label>
-            <input type="checkbox" id="inmapcheck">
-        </div>-->
-        
-        <div class="pla-control-actions">
-            <button class="pla-button pla-button-action" id="pla-button-checkonemap">Check Map Index</button>
-            <button class="pla-button pla-button-action" id="pla-button-checkmmos">Check All MMOS</button>
-            <button class="pla-button pla-button-action" id="pla-button-checkoutbreaks">Check Normal Outbreaks</button>
         </div>
     </section>
 
