Added support for in map mmo reading

--- a/templates/pages/mmos.html
+++ b/templates/pages/mmos.html
@@ -23,13 +23,12 @@
                 <select id="mapSelect">
                 </select>
             </div>
+            <div class="pla-control-spaced">
+                <label for="mmoInMap">Searching from inside the map?</label>
+                <input type="checkbox" id="mmoInMap">
+            </div>
             <button class="pla-button pla-button-action" id="pla-button-checkonemap">Check Single Map</button>
         </div>
-
-        <!--<div class="pla-control-spaced">
-            <label for="inmapcheck">In Area: (Not Currently Functional)</label>
-            <input type="checkbox" id="inmapcheck">
-        </div>-->
         
         <div class="pla-control-actions">
             <button class="pla-button pla-button-action" id="pla-button-checkoutbreaks">Check Normal Outbreaks</button>
