variable stuff, and bdsp underground stuff

--- a/templates/pages/multis.html
+++ b/templates/pages/multis.html
@@ -8,7 +8,7 @@
 	
     <div class="tab">
 		<button class="tablinks" id="defaultOpen" data-pla-tab-for="Results">Results</button>
-		<button class="tablinks" data-pla-tab-for="Maps">Variable Seed Tool</button>
+		<button class="tablinks" data-pla-tab-for="Maps">Count Seed Tool</button>
 	</div>
 	
 	<div id="Results" class="tabcontent">
@@ -21,7 +21,6 @@
 	<section class="count-section-results">
 		<div id="Maps" class="tabcontent">
 			<section class="pla-section-spawnmap">
-				<h3>Count Seed:</h3>
 				<div class="count-results" data-count-results>
 					Search For Count Seed Info
 				</div>
@@ -171,7 +170,6 @@
 		<div class="count-results-item" data-pla-count-template>
 			<ul class="count-results-ul">
 				<li><span class="count-results-label">Count Seed:</span> <span data-count-results-seed></span></li>
-				<li><span class="count-results-label">Seed Spawned In:</span> <span data-count-results-spawns></span></li>
 				<li><span class="count-results-label">Current Spawned In:</span> <span data-count-results-currspawns></span></li>
 			</ul>
 			<ul class="count-results-ul">
