--- a/static/css/style.css
+++ b/static/css/style.css
@@ -622,6 +622,739 @@ section.pla-section-expandable {
   margin-bottom: var(--spacing3);
 }
 
+.pla-header {
+  padding-top: var(--spacing4);
+  grid-area: header;
+}
+
+.pla-main {
+  grid-area: main;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: var(--spacing3);
+}
+
+.pla-nav {
+  grid-area: nav;
+}
+
+.pla-sidebar {
+  grid-area: sidebar;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: var(--spacing3);
+}
+
+.pla-footer {
+  grid-area: footer;
+}
+
+/* Block Styles */
+html {
+  accent-color: var(--brand);
+}
+
+body {
+  font-size: 16px;
+  font-family: "Lato", sans-serif;
+  line-height: 1.5;
+  color: var(--text1);
+  background-color: var(--surface3);
+}
+
+section {
+  background-color: var(--surface2);
+  border-radius: var(--corner-roundness2);
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  padding: var(--spacing3) var(--spacing4);
+  box-shadow: var(--shadow-4);
+}
+
+.pla-sidebar section {
+  gap: var(--spacing2);
+}
+
+.pla-control {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+}
+
+.pla-control-spaced {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.pla-control-actions {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  margin: var(--spacing2) 0 var(--spacing0);
+  gap: var(--spacing2);
+}
+
+/* Inputs */
+input[type="checkbox"] {
+  padding: var(--spacing1);
+}
+
+input[type="text"],
+input[type="number"],
+select {
+  color: var(--text1);
+  background-color: var(--surface3);
+  padding: var(--spacing1) var(--spacing2);
+  border: 2px solid var(--surface3);
+  border-radius: var(--corner-roundness1);
+}
+
+[color-scheme="light"] input[type="text"],
+[color-scheme="light"] input[type="number"],
+[color-scheme="light"] select {
+  border: 2px solid var(--gray-5);
+}
+
+input[type="text"]:active,
+input[type="text"]:focus,
+input[type="text"]:focus-visible,
+input[type="number"]:active,
+input[type="number"]:focus,
+input[type="number"]:focus-visible {
+  outline-color: var(--brand);
+  border-color: var(--brand);
+}
+
+/* Header */
+.pla-heading {
+  font-size: 2rem;
+  font-weight: 700;
+}
+
+.pla-heading-highlight {
+  font-size: 2.15rem;
+  font-weight: 800;
+  background: -webkit-linear-gradient(var(--blue-1), var(--blue-2));
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+/* Nav bar */
+.pla-nav {
+  background-color: var(--surface3);
+  border-radius: var(--corner-roundness2);
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  padding: 0 var(--spacing4);
+  box-shadow: var(--shadow-4);
+}
+
+[color-scheme="dark"] .pla-nav {
+  background-color: var(--surface2);
+}
+
+.pla-nav ul {
+  padding: 0;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.pla-nav li {
+  margin: 0;
+  list-style-type: none;
+}
+
+.pla-nav a {
+  text-align: center;
+  width: 15ch;
+  display: block;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: var(--brand);
+  padding: var(--spacing2);
+}
+
+.pla-nav a:hover,
+.pla-nav a:focus {
+  color: var(--surface2);
+  background-color: var(--brand);
+}
+
+.pla-nav a:active {
+  color: var(--surface2);
+  background: linear-gradient(
+    rgba(var(--blue-1-rgb), 0.6),
+    rgba(var(--blue-2-rgb), 0.6)
+  );
+}
+
+@media screen and (max-width: 992px) {
+  .pla-nav {
+    border-radius: 0;
+  }
+
+  .pla-nav a {
+    width: 14ch;
+  }
+}
+
+/* Footer */
+.pla-footer {
+  text-align: center;
+  padding: var(--spacing3);
+}
+
+.pla-footer a {
+  text-decoration: none;
+  color: rgba(var(--brand-rgb), 0.6);
+  padding: var(--spacing0) var(--spacing4);
+}
+
+.pla-footer a:hover {
+  color: var(--brand);
+}
+
+/* Regular button */
+.pla-button {
+  display: block;
+  text-align: center;
+  text-decoration: none;
+  color: var(--text1);
+  letter-spacing: 0.02rem;
+  cursor: pointer;
+  font-weight: bold;
+  padding: var(--spacing1) var(--spacing2);
+  border-radius: var(--corner-roundness1);
+  border: 2px solid var(--brand);
+  background-color: transparent;
+}
+
+[color-scheme="dark"] .pla-button {
+  font-weight: 600;
+}
+
+.pla-button:hover,
+.pla-button:focus {
+  background-color: rgba(var(--brand-rgb), 0.6);
+}
+
+.pla-button:active {
+  border: 2px solid var(--text2);
+  background: linear-gradient(
+    rgba(var(--blue-1-rgb), 0.6),
+    rgba(var(--blue-2-rgb), 0.6)
+  );
+}
+
+.pla-button:disabled {
+  color: var(--surface1);
+  background-color: rgba(var(--brand-rgb), 0.2);
+}
+
+.tab {
+  overflow: hidden;
+  border: 2px solid var(--brand);
+  background-color: transparent;
+}
+
+.tab button {
+  background-color: inherit;
+  float: left;
+  border: 1px solid var(--brand);
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  transition: 0.3s;
+}
+
+.tab button:hover {
+  background-color: rgba(var(--brand-rgb), 0.6);
+}
+
+.tab button.active {
+  background-color: rgba(var(--brand-rgb), 0.6);
+}
+
+.tabcontent {
+  display: none;
+  padding: 6px 12px;
+  border-top: none;
+}
+
+/* Action Button */
+.pla-button-action {
+  border: 2px solid var(--brand);
+  background-color: rgba(var(--brand-rgb), 1);
+}
+
+.pla-button-action:hover,
+.pla-button-action:focus {
+  border: 2px solid var(--text2);
+  background-color: rgba(var(--brand-rgb), 0.6);
+}
+
+.pla-button-action:active {
+  border: 2px solid var(--text1);
+  background: linear-gradient(
+    rgba(var(--blue-1-rgb), 0.6),
+    rgba(var(--blue-2-rgb), 0.6)
+  );
+}
+
+/* Expandabile Sections */
+section.pla-section-expandable {
+  gap: 0;
+}
+
+.pla-section-expandable .expandable {
+  display: flex;
+  flex-direction: column;
+  gap: var(--spacing2);
+}
+
+.pla-section-expandable .expandable > *:first-child {
+  padding-top: var(--spacing2);
+}
+
+.expandable {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+}
+
+.expandable-control {
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  align-items: center;
+}
+
+.expandable-control:before {
+  content: "";
+}
+
+.expandable-control:after {
+  content: "\02795"; /* Unicode character for "plus" sign (+) */
+  color: var(--text1);
+  font-size: 0.8rem;
+  font-weight: bold;
+  justify-self: end;
+}
+
+.expandable-control.expanded:after {
+  content: "\2796"; /* Unicode character for "minus" sign (-) */
+}
+
+/* Messages Styling */
+.pla-message {
+  border-radius: var(--corner-roundness1);
+  padding: var(--spacing2) var(--spacing3);
+  margin: var(--spacing3) 0;
+}
+
+.pla-message-error {
+  color: var(--red);
+  background-color: var(--red-bg);
+  border: 1px solid var(--red);
+}
+
+.pla-message-info {
+  color: var(--text1);
+  background-color: rgba(var(--brand-rgb), 0.8);
+  border: 1px solid var(--text2);
+}
+
+/* Modal Styling */
+.pla-modal {
+  margin: auto;
+  max-width: 50ch;
+  background-color: var(--surface1);
+  border: none;
+  border-radius: var(--corner-roundness2);
+  padding: var(--spacing4) var(--spacing4);
+  box-shadow: var(--shadow-5);
+}
+
+.pla-modal::backdrop {
+  background: rgb(0 0 0 / 0.5);
+}
+
+.pla-modal p {
+  margin-bottom: var(--spacing3);
+}
+
+.pla-header {
+  padding-top: var(--spacing4);
+  grid-area: header;
+}
+
+.swsh-main {
+  grid-area: main;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: var(--spacing3);
+}
+
+.swsh-nav {
+  grid-area: nav;
+}
+
+.swsh-sidebar {
+  grid-area: sidebar;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: var(--spacing3);
+}
+
+.swsh-footer {
+  grid-area: footer;
+}
+
+/* Block Styles */
+html {
+  accent-color: var(--brand);
+}
+
+body {
+  font-size: 16px;
+  font-family: "Lato", sans-serif;
+  line-height: 1.5;
+  color: var(--text1);
+  background-color: var(--surface3);
+}
+
+section {
+  background-color: var(--surface2);
+  border-radius: var(--corner-roundness2);
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  padding: var(--spacing3) var(--spacing4);
+  box-shadow: var(--shadow-4);
+}
+
+.swsh-sidebar section {
+  gap: var(--spacing2);
+}
+
+.swsh-control {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+}
+
+.swsh-control-spaced {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.swsh-control-actions {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  margin: var(--spacing2) 0 var(--spacing0);
+  gap: var(--spacing2);
+}
+
+/* Inputs */
+input[type="checkbox"] {
+  padding: var(--spacing1);
+}
+
+input[type="text"],
+input[type="number"],
+select {
+  color: var(--text1);
+  background-color: var(--surface3);
+  padding: var(--spacing1) var(--spacing2);
+  border: 2px solid var(--surface3);
+  border-radius: var(--corner-roundness1);
+}
+
+[color-scheme="light"] input[type="text"],
+[color-scheme="light"] input[type="number"],
+[color-scheme="light"] select {
+  border: 2px solid var(--gray-5);
+}
+
+input[type="text"]:active,
+input[type="text"]:focus,
+input[type="text"]:focus-visible,
+input[type="number"]:active,
+input[type="number"]:focus,
+input[type="number"]:focus-visible {
+  outline-color: var(--brand);
+  border-color: var(--brand);
+}
+
+/* Header */
+.swsh-heading {
+  font-size: 2rem;
+  font-weight: 700;
+}
+
+.swsh-heading-highlight {
+  font-size: 2.15rem;
+  font-weight: 800;
+  background: -webkit-linear-gradient(var(--blue-1), var(--blue-2));
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+/* Nav bar */
+.swsh-nav {
+  background-color: var(--surface3);
+  border-radius: var(--corner-roundness2);
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  padding: 0 var(--spacing4);
+  box-shadow: var(--shadow-4);
+}
+
+[color-scheme="dark"] .swsh-nav {
+  background-color: var(--surface2);
+}
+
+.swsh-nav ul {
+  padding: 0;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.swsh-nav li {
+  margin: 0;
+  list-style-type: none;
+}
+
+.swsh-nav a {
+  text-align: center;
+  width: 15ch;
+  display: block;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: var(--brand);
+  padding: var(--spacing2);
+}
+
+.swsh-nav a:hover,
+.swsh-nav a:focus {
+  color: var(--surface2);
+  background-color: var(--brand);
+}
+
+.swsh-nav a:active {
+  color: var(--surface2);
+  background: linear-gradient(
+    rgba(var(--blue-1-rgb), 0.6),
+    rgba(var(--blue-2-rgb), 0.6)
+  );
+}
+
+@media screen and (max-width: 992px) {
+  .swsh-nav {
+    border-radius: 0;
+  }
+
+  .swsh-nav a {
+    width: 14ch;
+  }
+}
+
+/* Footer */
+.swsh-footer {
+  text-align: center;
+  padding: var(--spacing3);
+}
+
+.swsh-footer a {
+  text-decoration: none;
+  color: rgba(var(--brand-rgb), 0.6);
+  padding: var(--spacing0) var(--spacing4);
+}
+
+.swsh-footer a:hover {
+  color: var(--brand);
+}
+
+/* Regular button */
+.swsh-button {
+  display: block;
+  text-align: center;
+  text-decoration: none;
+  color: var(--text1);
+  letter-spacing: 0.02rem;
+  cursor: pointer;
+  font-weight: bold;
+  padding: var(--spacing1) var(--spacing2);
+  border-radius: var(--corner-roundness1);
+  border: 2px solid var(--brand);
+  background-color: transparent;
+}
+
+[color-scheme="dark"] .swsh-button {
+  font-weight: 600;
+}
+
+.swsh-button:hover,
+.swsh-button:focus {
+  background-color: rgba(var(--brand-rgb), 0.6);
+}
+
+.swsh-button:active {
+  border: 2px solid var(--text2);
+  background: linear-gradient(
+    rgba(var(--blue-1-rgb), 0.6),
+    rgba(var(--blue-2-rgb), 0.6)
+  );
+}
+
+.swsh-button:disabled {
+  color: var(--surface1);
+  background-color: rgba(var(--brand-rgb), 0.2);
+}
+
+.tab {
+  overflow: hidden;
+  border: 2px solid var(--brand);
+  background-color: transparent;
+}
+
+.tab button {
+  background-color: inherit;
+  float: left;
+  border: 1px solid var(--brand);
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  transition: 0.3s;
+}
+
+.tab button:hover {
+  background-color: rgba(var(--brand-rgb), 0.6);
+}
+
+.tab button.active {
+  background-color: rgba(var(--brand-rgb), 0.6);
+}
+
+.tabcontent {
+  display: none;
+  padding: 6px 12px;
+  border-top: none;
+}
+
+/* Action Button */
+.swsh-button-action {
+  border: 2px solid var(--brand);
+  background-color: rgba(var(--brand-rgb), 1);
+}
+
+.swsh-button-action:hover,
+.swsh-button-action:focus {
+  border: 2px solid var(--text2);
+  background-color: rgba(var(--brand-rgb), 0.6);
+}
+
+.swsh-button-action:active {
+  border: 2px solid var(--text1);
+  background: linear-gradient(
+    rgba(var(--blue-1-rgb), 0.6),
+    rgba(var(--blue-2-rgb), 0.6)
+  );
+}
+
+/* Expandabile Sections */
+section.swsh-section-expandable {
+  gap: 0;
+}
+
+.swsh-section-expandable .expandable {
+  display: flex;
+  flex-direction: column;
+  gap: var(--spacing2);
+}
+
+.swsh-section-expandable .expandable > *:first-child {
+  padding-top: var(--spacing2);
+}
+
+.expandable {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+}
+
+.expandable-control {
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  align-items: center;
+}
+
+.expandable-control:before {
+  content: "";
+}
+
+.expandable-control:after {
+  content: "\02795"; /* Unicode character for "plus" sign (+) */
+  color: var(--text1);
+  font-size: 0.8rem;
+  font-weight: bold;
+  justify-self: end;
+}
+
+.expandable-control.expanded:after {
+  content: "\2796"; /* Unicode character for "minus" sign (-) */
+}
+
+/* Messages Styling */
+.swsh-message {
+  border-radius: var(--corner-roundness1);
+  padding: var(--spacing2) var(--spacing3);
+  margin: var(--spacing3) 0;
+}
+
+.swsh-message-error {
+  color: var(--red);
+  background-color: var(--red-bg);
+  border: 1px solid var(--red);
+}
+
+.swsh-message-info {
+  color: var(--text1);
+  background-color: rgba(var(--brand-rgb), 0.8);
+  border: 1px solid var(--text2);
+}
+
+/* Modal Styling */
+.swsh-modal {
+  margin: auto;
+  max-width: 50ch;
+  background-color: var(--surface1);
+  border: none;
+  border-radius: var(--corner-roundness2);
+  padding: var(--spacing4) var(--spacing4);
+  box-shadow: var(--shadow-5);
+}
+
+.swsh-modal::backdrop {
+  background: rgb(0 0 0 / 0.5);
+}
+
+.swsh-modal p {
+  margin-bottom: var(--spacing3);
+}
 /* PAGE STYLES */
 
 /* Results */
@@ -886,6 +1619,138 @@ section.pla-section-expandable {
 }
 
 .count-iv-plus {
+  font-weight: bold;
+  color: red;
+}
+
+.swsh-results {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: var(--spacing3);
+  min-height: 60vh;
+}
+
+.swsh-results-message {
+  text-align: center;
+  max-width: 80ch;
+  padding-bottom: 5vh;
+  margin: auto;
+}
+
+.swsh-results-item {
+  border-radius: var(--corner-roundness2);
+  padding: var(--spacing1) var(--spacing3) var(--spacing2);
+  box-shadow: var(--shadow-2);
+  display: flex;
+  flex-direction: column;
+  gap: var(--spacing0);
+  background-color: var(--surface1);
+}
+
+.swsh-results-ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  align-items: baseline;
+  gap: 3ch;
+}
+
+.swsh-results-heading {
+  margin-bottom: var(--spacing1);
+  justify-content: space-between;
+}
+
+.swsh-results-ul:not(.swsh-results-heading) {
+  margin-left: var(--spacing3);
+}
+
+.swsh-results-ul li:not(:first-child) {
+  margin-left: var(--spacing3);
+}
+
+.swsh-result-true {
+  text-transform: capitalize;
+  color: var(--brand);
+  font-weight: bold;
+}
+
+.swsh-result-false {
+  text-transform: capitalize;
+  color: var(--text2);
+}
+
+.swsh-male {
+  color: blue;
+  font-weight: bold;
+}
+
+.swsh-female {
+  color: pink;
+  font-weight: bold;
+}
+
+.swsh-results-firstpath {
+  color: var(--brand);
+  font-weight: bold;
+}
+
+.swsh-results-revisit {
+  color: var(--color-revisit);
+  font-weight: bold;
+}
+
+.swsh-results-bonus {
+  color: var(--color-bonus);
+  font-weight: bold;
+}
+
+.swsh-results-init {
+  color: var(--color-init);
+  font-weight: bold;
+}
+
+.swsh-results-species {
+  font-size: 1.25rem;
+  font-weight: bold;
+}
+
+.swsh-results-label {
+  display: inline-block;
+  min-width: 7ch;
+}
+
+/* IVs */
+.swsh-results-ivs-container {
+  display: flex;
+  margin-left: var(--spacing3);
+}
+
+.swsh-results-ivs {
+  display: inline;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.swsh-results-ivs li {
+  display: inline-block;
+}
+
+.swsh-results-ivs li:not(:first-child)::before {
+  font-weight: normal;
+  color: var(--text1);
+  content: " / ";
+  margin-left: 0.1rem;
+}
+
+.swsh-iv-minus {
+  font-weight: bold;
+  color: var(--brand);
+}
+
+.swsh-iv-plus {
   font-weight: bold;
   color: red;
 }
